--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,9 +13,682 @@
  */
 
 body {
-	padding-top: 40px;
+
+	background: #E9E9E9 url(../img/bg.jpg) repeat 0 0;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: top center;
+	font: 13px/1.7em 'Open Sans';
+		padding-top: 40px;
 }
 
 .alert {
 	margin-top: 10px;
+}
+
+
+
+/*------------------------------------------------------------------
+[1. Global]
+*/
+
+    
+p { 
+	font: 13px/1.7em 'Open Sans'; 	
+}
+    
+input,
+button,
+select,
+textarea {
+  font-family: 'Open Sans';
+}
+
+.dropdown .dropdown-menu {
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+}
+
+.btn-icon-only {
+	padding-right: 3px;
+	padding-left: 3px;
+}
+
+.table td {
+	vertical-align: middle;
+}
+
+.table-bordered th {
+	background: #E9E9E9;
+	background:-moz-linear-gradient(top, #FAFAFA 0%, #E9E9E9 100%); /* FF3.6+ */
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#FAFAFA), color-stop(100%,#E9E9E9)); /* Chrome,Safari4+ */
+	background:-webkit-linear-gradient(top, #FAFAFA 0%,#E9E9E9 100%); /* Chrome10+,Safari5.1+ */
+	background:-o-linear-gradient(top, #FAFAFA 0%,#E9E9E9 100%); /* Opera11.10+ */
+	background:-ms-linear-gradient(top, #FAFAFA 0%,#E9E9E9 100%); /* IE10+ */
+	background:linear-gradient(top, #FAFAFA 0%,#E9E9E9 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FAFAFA', endColorstr='#E9E9E9');
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#FAFAFA', endColorstr='#E9E9E9')";
+	
+	font-size: 10px;
+	color: #444;
+	text-transform: uppercase;
+}
+
+
+
+
+
+
+
+/*------------------------------------------------------------------
+[2. Navbar / .navbar]
+*/
+
+.navbar .container {
+	position: relative;
+}
+
+.navbar-inner {
+	padding: 7px 0;
+	
+	background: #e4e4e4;
+	
+	border-bottom: 1px solid #3a85bc;	
+	
+	-moz-border-radius: 0;
+	-webkit-border-radius: 0;
+	border-radius: 0;
+}
+
+.navbar-fixed-top {
+	position: static;
+}
+
+.navbar .nav a {
+	font-size: 11px;
+}
+
+.navbar .brand {
+	font-weight: 600;
+	position: relative;
+	top: 2px;
+}
+
+.navbar .search-query {
+	background-color: #e4e4e4;
+	width: 150px;
+	font-size: 16px;
+	font-weight: bold;
+	border:none;
+	margin-top:10px;
+	
+}
+
+.navbar .search-query::-webkit-input-placeholder {
+    color: #3d3d3d;
+}
+
+.navbar .search-query:-moz-placeholder {
+    color: #3d3d3d;
+}
+
+
+
+/*------------------------------------------------------------------
+[3. Subnavbar / .subnavbar]
+*/
+
+.subnavbar {
+    	margin-bottom: 2.5em;
+    	border-top: 1px solid #3a85bc;
+    }
+    
+.subnavbar-inner {
+	height: 80px;
+	
+	
+	background: #4fb2e3;
+	background-image: -moz-linear-gradient(top, #4fb2e3, #2e7dc7);
+	background-image: -ms-linear-gradient(top, #4fb2e3, #2e7dc7);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4fb2e3), to(#2e7dc7));
+	background-image: -webkit-linear-gradient(top, #4fb2e3, #2e7dc7);
+	background-image: -o-linear-gradient(top, #4fb2e3, #2e7dc7);
+	background-image: linear-gradient(top, #4fb2e3, #2e7dc7);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4fb2e3', endColorstr='#2e7dc7', GradientType=0);
+	
+	border-bottom: 1px solid #3a85bc;
+}
+
+.subnavbar .container > ul {
+	display: inline-block;
+	
+	height: 80px;
+	padding: 0;
+	margin: 0;
+	
+	border-left: 1px solid #2e7dc7;
+	border-right: 1px solid #4fb2e3;
+}
+
+.subnavbar .container > ul > li {
+	float: left;
+	
+	min-width: 90px;
+	height: 80px;
+	padding: 0;
+	margin: 0;
+	
+	text-align: center;
+	list-style: none;
+	
+	border-left: 1px solid #4fb2e3;
+	border-right: 1px solid #2e7dc7;
+	
+}
+
+.subnavbar .container > ul > li > a {
+	display: block;
+	height: 100%;
+	padding: 0 15px;
+	font-size: 12px;
+	font-weight: bold;
+	color: #e4e4e4;
+	
+	text-shadow: 1px 1px 1px rgba(0,0,0,.2);
+}
+
+.subnavbar .container > ul > li > a:hover {
+	color: #feffff;
+	text-decoration: none;
+}
+
+.subnavbar .container > ul > li > a > i {
+	display: inline-block;
+	
+	width: 24px;
+	height: 24px;
+	margin-top: 17px;
+	margin-bottom: .25em;
+	
+	font-size: 28px;
+	
+}
+
+.subnavbar .container > ul > li > a > span {
+	display: block;
+}
+
+
+.subnavbar .container > ul > li.active > a {
+	background: #3a85bc;
+	color: #feffff;
+}
+    
+
+.subnavbar .dropdown .dropdown-menu a {
+	font-size: 12px;
+}
+
+    
+.subnavbar .dropdown .dropdown-menu {
+    	text-align: left;
+    	
+		-webkit-border-top-left-radius: 0;
+		-webkit-border-top-right-radius: 0;
+		-moz-border-radius-topleft: 0;
+		-moz-border-radius-topright: 0;
+		border-top-left-radius: 0;
+		border-top-right-radius: 0;
+    }
+    
+    
+    
+.subnavbar .dropdown-menu::before {
+	content: '';
+	display: inline-block;
+	border-left: 7px solid transparent;
+	border-right: 7px solid transparent;
+	border-bottom: 7px solid #CCC;
+	border-bottom-color: rgba(0, 0, 0, 0.2);
+	position: absolute;
+	top: -7px;
+	left: 9px;
+}
+
+.subnavbar .dropdown-menu::after {
+	content: '';
+	display: inline-block;
+	border-left: 6px solid transparent;
+	border-right: 6px solid transparent;
+	border-bottom: 6px solid white;
+	position: absolute;
+	top: -6px;
+	left: 10px;
+}
+
+
+.subnavbar .caret {
+	margin-top: 4px;
+	
+	border-top-color: white;
+	border-bottom-color: white;
+}
+
+.subnavbar .dropdown.open .caret {
+	display: none;
+}
+
+
+
+
+
+/*------------------------------------------------------------------
+[4. Main / .main]
+*/
+
+.main {
+	
+
+}
+
+
+
+/*------------------------------------------------------------------
+[5. Extra / .extra]
+*/
+
+.bottom-fixed {
+
+width:100%;
+margin:0 auto;
+}
+
+.extra {
+	border-bottom: 1px solid #3a85bc;
+
+}
+
+.extra-inner {
+	padding: 20px 0;
+	
+	font-size: 11px;
+	color: #c3c3c3;
+	
+	background: #18466a;
+}
+
+.extra a {
+	color: #e3e3e3;
+}
+
+.extra h4 {
+	margin-bottom: 1em;
+	
+	font-weight: 400;
+}
+
+.extra ul {
+	padding: 0;
+	margin: 0;
+}
+
+.extra li {
+	margin-bottom: .6em;
+	
+	list-style: none;
+}
+
+
+
+
+/*------------------------------------------------------------------
+[6. Footer/ .footer]
+*/
+
+.footer {
+	margin-top: 0;
+	background-color:#18466a;	
+}
+
+.footer-inner {
+	width:100%;
+	padding: 15px 0;
+	margin:0 auto;
+	font-size: 12px;
+	color: #e3e3e3;
+
+}
+
+.footer a {
+	color: #e3e3e3;
+}
+
+.footer a:hover {
+	color: #FFF;
+	text-decoration: none;
+}
+
+
+/*------------------------------------------------------------------
+[6. Widget / .widget]
+*/
+
+.widget {
+	
+	position: relative;
+	clear: both;
+	
+	width: auto;
+	
+	margin-bottom: 2em;
+		
+	overflow: hidden;
+}
+	
+.widget-header {
+	
+	position: relative;
+	
+	height: 40px;
+	line-height: 40px;
+	
+	background: #E9E9E9;
+	background:-moz-linear-gradient(top, #FAFAFA 0%, #E9E9E9 100%); /* FF3.6+ */
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#FAFAFA), color-stop(100%,#E9E9E9)); /* Chrome,Safari4+ */
+	background:-webkit-linear-gradient(top, #FAFAFA 0%,#E9E9E9 100%); /* Chrome10+,Safari5.1+ */
+	background:-o-linear-gradient(top, #FAFAFA 0%,#E9E9E9 100%); /* Opera11.10+ */
+	background:-ms-linear-gradient(top, #FAFAFA 0%,#E9E9E9 100%); /* IE10+ */
+	background:linear-gradient(top, #FAFAFA 0%,#E9E9E9 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FAFAFA', endColorstr='#E9E9E9');
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#FAFAFA', endColorstr='#E9E9E9')";
+	
+	
+	border: 1px solid #D5D5D5;
+	
+	-webkit-border-top-left-radius: 4px;
+	-webkit-border-top-right-radius: 4px;
+	-moz-border-radius-topleft: 4px;
+	-moz-border-radius-topright: 4px;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+	
+	-webkit-background-clip: padding-box;
+}	
+	
+	.widget-header h3 {
+		
+		position: relative;
+		top: 2px;
+		left: 10px;
+		
+		display: inline-block;
+		margin-right: 3em;
+		
+		font-size: 14px;
+		font-weight: 800;
+		color: #555;
+		line-height: 18px;
+		
+		text-shadow: 1px 1px 2px rgba(255,255,255,.5);
+	}
+	
+		.widget-header [class^="icon-"], .widget-header [class*=" icon-"] {
+			
+			display: inline-block;
+			margin-left: 13px;
+			margin-right: -2px;
+			
+			font-size: 16px;
+			color: #555;
+			vertical-align: middle;
+			
+			
+			
+		}
+
+
+
+
+.widget-content {
+	padding: 20px 15px 15px;
+	
+	background: #FFF;
+	
+	
+	border: 1px solid #D5D5D5;
+	
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+}
+
+.widget-header+.widget-content {
+	border-top: none;
+	
+	-webkit-border-top-left-radius: 0;
+	-webkit-border-top-right-radius: 0;
+	-moz-border-radius-topleft: 0;
+	-moz-border-radius-topright: 0;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+}
+
+.widget-nopad .widget-content {
+	padding: 0;
+}
+
+/* Widget Content Clearfix */	
+.widget-content:before,
+.widget-content:after {
+    content:"";
+    display:table;
+}
+
+.widget-content:after {
+    clear:both;
+}
+
+/* For IE 6/7 (trigger hasLayout) */
+.widget-content {
+    zoom:1;
+}
+
+/* Widget Table */
+
+.widget-table .widget-content {
+	padding: 0;
+}
+
+.widget-table .table {
+	margin-bottom: 0;
+	
+	border: none;
+}
+
+.widget-table .table tr td:first-child {
+	border-left: none;
+}
+
+.widget-table .table tr th:first-child {
+	border-left: none;
+}
+
+
+/* Widget Plain */
+
+.widget-plain {
+	
+	background: transparent;
+	
+	border: none;
+}
+
+.widget-plain .widget-content {
+	padding: 0;
+	
+	background: transparent;
+	
+	border: none;
+}
+
+
+/* Widget Box */
+
+.widget-box {	
+	
+}
+
+.widget-box .widget-content {	
+	background: #E3E3E3;	
+	background: #FFF;
+}
+
+
+
+
+/*------------------------------------------------------------------
+[7. Error / .error-container]
+*/
+
+.error-container {
+	margin-top: 4em;
+	margin-bottom: 4em;
+	text-align: center;
+}
+
+.error-container h1 {
+	margin-bottom: .5em;
+	
+	font-size: 120px;
+	line-height: 1em;
+}
+
+.error-container h2 {
+	margin-bottom: .75em;
+	font-size: 28px;
+}
+
+.error-container .error-details {
+	margin-bottom: 1.5em;
+	
+	font-size: 16px;
+}
+
+.error-container .error-actions a {
+	margin: 0 .5em;
+}
+
+
+
+
+
+/*------------------------------------------------------------------
+[8. Miscellaneous]
+*/
+
+.chart-holder {
+	width: 100%;
+	height: 250px;
+}
+
+.get-invited {
+height:75px;
+width:100%;
+margin:0 auto;
+border-top-left-radius: 4px;
+border-top-right-radius: 4px;
+background: rgba(0,0,0,0.7);
+margin-top: 175px;
+}
+
+.get-invited .home-button {
+width: 148px;
+height: 42px;
+float: left;
+margin: 16px;
+
+}
+
+.signinbutton {
+padding:10px 25px;
+}
+
+.get-invited .get-invited-text {
+color:#eeeeee;
+margin-right: 18px;
+margin-top: 18px;
+height: 50px;
+float: right;
+}
+
+#lower {background-color:#000;}
+
+.main-foot {
+background-color:#18466a;
+border-top-left-radius: 4px;
+border-top-right-radius: 4px;
+background-repeat: no-repeat;
+
+}
+
+.picture-foot-inner{
+height:250px;
+background: #e9e9e9 url(../img/home-world.png);
+background-position: center;
+border-bottom-left-radius: 4px;
+border-bottom-right-radius: 4px;
+background-repeat: no-repeat;
+margin:0 auto;
+}
+
+
+.welcome-container h1, .welcome-container .tagline p {
+color: #e3e3e3;
+text-shadow: 1px 1px 1px #333;
+}
+
+.tagline p {
+color: #e3e3e3;
+text-shadow: 1px 1px 1px #333;
+font-size:16px;
+}
+
+.welcome-container .tagline {
+float: left;
+margin-top: 100px;
+}
+
+.main-query {padding:10px; margin:15px 0px; width:70%;}
+
+.home-login {
+width: 385px;
+height: 175px;
+float: right;
+margin-top: 120px;
+}
+
+.home-login p{color:#e3e3e3;}
+.home-login-field input {
+background: rgba(0,0,0,0.6);
+border: 2px solid rgba(255,255,255,0.1);
+-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.4);
+-moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.4);
+box-shadow: inset 0 0 5px rgba(0,0,0,0.4);
+color: white;
+color: rgba(255,255,255,0.8);
+font-family: Proxima Nova, Helvetica, Arial, sans-serif;
+padding: 10px;
+padding-top: 0;
+padding-bottom: 0;
+outline: 0;
+width: 350px;
+font-weight: normal;
+font-size: 14px;
+color: #B4B4B4;
+height: 37px;
+-moz-border-radius: 4px;
+-webkit-border-radius: 4px;
+border-radius: 4px;
 }
