--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-  <%= f.label :email %><br /><%= f.input :first_name %>
+  <%= f.input :first_name %>
   <%= f.input :last_name %>
   <%= f.input :profile_name %>
   <%= f.input :email %>
