--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TouristApp</title>
-  <%= stylesheet_link_tag "application", :media => "all" %>
+  <title>Treebook</title>
+  <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
@@ -10,7 +10,10 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
-				<a href="#" class="brand">Tourist</a>
+				<a href="#" class="brand"> Treebook</a>
+				<ul class="nav">
+					<li><%= link_to "All Statuses", feed_path %></li>
+				</ul>
 				<ul class="nav pull-right">
 					<% if user_signed_in? %>
 						<li><%= link_to current_user.full_name, edit_user_registration_path %></li>
