--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,14 +12,18 @@
  *= require_tree .
  */
 
- body {
-
- 	padding-top:50px;
-
- }
+body {
+	padding-top: 40px;
+		background: #77b5ee url(../img/bg.jpg) repeat 0 0;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: top center;
+	font: 13px/1.7em 'Open Sans';
+	font-family: 'Open Sans', sans-serif;
+}
 
 .alert {
-	margin-top:10px;
+	margin-top: 10px;
 }
 
 /*------------------------------------------------------------------
@@ -50,16 +54,9 @@
 /*------------------------------------------------------------------
 [1. Global]
 */
-
-body {
-	background: #77b5ee url(../img/bg.jpg) repeat 0 0;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-position: top center;
-	font: 13px/1.7em 'Open Sans';
+p { 
+	font: 13px/1.7em 'Open Sans';	
 }
-    
-
     
 input,
 button,
@@ -639,16 +636,13 @@ margin: 16px;
 
 }
 
-.signinbutton {
-padding:10px 25px;
-}
 
 .get-invited .get-invited-text {
 color:#eeeeee;
 margin-right: 18px;
 margin-top: 18px;
 height: 50px;
-float: right;
+float: left;
 }
 
 #lower {background-color:#000;}
@@ -673,8 +667,9 @@ margin:0 auto;
 
 
 .welcome-container h1, .welcome-container .tagline p {
-color: #e3e3e3;
-text-shadow: 1px 1px 1px #333;
+color: #fff;
+text-shadow: 0px 1px 1px rgb(0,0,0,0, .5);
+font-weight:bold;
 }
 
 .tagline p {
@@ -684,28 +679,27 @@ font-size:16px;
 }
 
 .welcome-container .tagline {
-float: left;
+
 margin-top: 100px;
 }
 
-.main-query {padding:10px; margin:15px 0px; width:70%;}
+.main-query {padding:10px; margin:0 auto; width:70%;}
 
 
 .main-query-field input {
-
+margin-top:20px;
 background: rgba(0,0,0,0.6);
 border: 2px solid rgba(255,255,255,0.1);
 -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.4);
 -moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.4);
 box-shadow: inset 0 0 5px rgba(0,0,0,0.4);
 color: white;
-color: rgba(255,255,255,0.8);
 font-family: Proxima Nova, Helvetica, Arial, sans-serif;
 padding: 10px;
 padding-top: 0;
 padding-bottom: 0;
 outline: 0;
-width: 70%
+width: 50%
 font-weight: normal;
 font-size: 14px;
 color: #B4B4B4;
@@ -713,36 +707,268 @@ height: 37px;
 -moz-border-radius: 4px;
 -webkit-border-radius: 4px;
 border-radius: 4px;
-
-
-}
-.home-login {
-width: 385px;
-height: 175px;
-float: right;
-margin-top: 120px;
+text-align:center;
 }
 
-.home-login p{color:#e3e3e3; font-size:16px;}
-.home-login-field input {
-background: rgba(0,0,0,0.6);
-border: 2px solid rgba(255,255,255,0.1);
--webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.4);
--moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.4);
-box-shadow: inset 0 0 5px rgba(0,0,0,0.4);
-color: white;
-color: rgba(255,255,255,0.8);
-font-family: Proxima Nova, Helvetica, Arial, sans-serif;
-padding: 10px;
-padding-top: 0;
-padding-bottom: 0;
-outline: 0;
-width: 70%;
-font-weight: normal;
-font-size: 14px;
-color: #B4B4B4;
-height: 37px;
--moz-border-radius: 4px;
--webkit-border-radius: 4px;
-border-radius: 4px;
+
+margin:0 auto;
+}
+.isotope,
+.isotope .isotope-item {
+  /* change duration value to whatever you like */
+  -webkit-transition-duration: 0.8s;
+     -moz-transition-duration: 0.8s;
+      -ms-transition-duration: 0.8s;
+       -o-transition-duration: 0.8s;
+          transition-duration: 0.8s;
+}
+
+.isotope {
+  -webkit-transition-property: height, width;
+     -moz-transition-property: height, width;
+      -ms-transition-property: height, width;
+       -o-transition-property: height, width;
+          transition-property: height, width;
+}
+
+.isotope .isotope-item {
+  -webkit-transition-property: -webkit-transform, opacity;
+     -moz-transition-property:    -moz-transform, opacity;
+      -ms-transition-property:     -ms-transform, opacity;
+       -o-transition-property:      -o-transform, opacity;
+          transition-property:         transform, opacity;
+}
+
+/**** disabling Isotope CSS3 transitions ****/
+
+.isotope.no-transition,
+.isotope.no-transition .isotope-item,
+.isotope .isotope-item.no-transition {
+  -webkit-transition-duration: 0s;
+     -moz-transition-duration: 0s;
+      -ms-transition-duration: 0s;
+       -o-transition-duration: 0s;
+          transition-duration: 0s;
+}
+
+#zoom-box {
+	background: white;
+	border-radius: 10px;
+	box-shadow: 0px 0px 10px rgba(50, 50, 50, 0.75);
+    padding: 10px;
+    z-index: 1000;
+    border: 1px solid #999;
+}
+
+#zoom-box img {
+padding:0px;
+}
+
+#zoom-box > .zoom-close {
+	position: absolute;
+	top: -10px;
+	left: -13px;
+}
+
+#zoom-box img {
+	border: none;
+}
+
+/*Gallery*/
+.gallery .img-polaroid {
+  padding: 4px;
+  border: 0px;
+}
+.gallery img {
+  width: 220px;
+}
+.gallery .thumbnail {
+  margin: .75em .75em 0em 0em;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+}
+.gallery .image-data {
+  background: white;
+  line-height: 1.5em;
+  border-top: 0px;
+  padding: 0em 5px;
+}
+.gallery .image-data i,
+.gallery .image-data span {
+  height: 1.5em;
+}
+.gallery .image-data .title {
+  font-size: .75em;
+}
+.gallery img {
+  display: block;
+  -webkit-transition: all 0.25s linear;
+  -moz-transition: all 0.25s linear;
+  -ms-transition: all 0.25s linear;
+  -o-transition: all 0.25s linear;
+  transition: all 0.25s linear;
+}
+.gallery img:hover {
+  opacity: 0.8;
+}
+.img-polaroid {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  border: 1px solid #ddd;
+}
+.dialog,
+.row .dialog,
+.row-fluid .dialog,
+.row-fluid [class*="span"].dialog:first-child {
+  margin: 0px auto;
+  margin-top: 5em;
+  margin-bottom: 5em;
+  float: none;
+  width: 300px;
+}
+.dialog input[type="checkbox"],
+.row .dialog input[type="checkbox"],
+.row-fluid .dialog input[type="checkbox"],
+.row-fluid [class*="span"].dialog:first-child input[type="checkbox"] {
+  margin: 0px;
+}
+.dialog .alert,
+.row .dialog .alert,
+.row-fluid .dialog .alert,
+.row-fluid [class*="span"].dialog:first-child .alert {
+  margin-bottom: 1em;
+}
+.dialog form,
+.row .dialog form,
+.row-fluid .dialog form,
+.row-fluid [class*="span"].dialog:first-child form {
+  margin-bottom: 0px;
+}
+.dialog .remember-me,
+.row .dialog .remember-me,
+.row-fluid .dialog .remember-me,
+.row-fluid [class*="span"].dialog:first-child .remember-me {
+  padding: .5em 0em 0em 0em;
+}
+
+.main-info {
+	margin-top:20px;
+	text-align:center;
+}
+.tagline {
+	text-align:center;
+}
+.users {margin:0 auto; text-align:center; margin-top:25px;}
+
+
+
+
+.signinbutton {
+	margin:0 15px;
+	background-color: #faa732;
+	background-image: -moz-linear-gradient(top, #fbb450, #f89406);
+	background-image: -ms-linear-gradient(top, #fbb450, #f89406);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fbb450), to(#f89406));
+	background-image: -webkit-linear-gradient(top, #fbb450, #f89406);
+	background-image: -o-linear-gradient(top, #fbb450, #f89406);
+	background-image: linear-gradient(top, #fbb450, #f89406);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fbb450', endColorstr='#f89406', GradientType=0);
+	border-color: #f89406 #f89406 #ad6704;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+	color: white;
+	padding: 10px 35px;
+	font-size: 17px;
+	text-shadow:0 1px 1px rgba(0, 0, 0, 0.5);
+	-webkit-transition-property: background-color,color;
+	-moz-transition-property: background-color,color;
+	-o-transition-property: background-color,color;
+	transition-property: background-color,color;
+	-webkit-transition-duration: 0.3s;
+	-moz-transition-duration: 0.3s;
+	-o-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+}
+.btn.signinbutton{
+	background-color: #faa732;
+	background-image: -moz-linear-gradient(top, #fbb450, #f89406);
+	background-image: -ms-linear-gradient(top, #fbb450, #f89406);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fbb450), to(#f89406));
+	background-image: -webkit-linear-gradient(top, #fbb450, #f89406);
+	background-image: -o-linear-gradient(top, #fbb450, #f89406);
+	background-image: linear-gradient(top, #fbb450, #f89406);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fbb450', endColorstr='#f89406', GradientType=0);
+	border-color: #f89406 #f89406 #ad6704;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	filter: progid:dximagetrans
+	color:white;
+	text-shadow:0px 1px 1px rgb(0,0,0,0, .5);
+	padding:10px 35px;
+	font-size:17px;
+	-webkit-transition-property:background-color,color;
+	-moz-transition-property:background-color,color;-o-transition-property:background-color,color;
+	transition-property:background-color,color;
+	-webkit-transition-duration:0.3s;
+	-moz-transition-duration:0.3s;-o-transition-duration:0.3s;
+	transition-duration:0.3s;
+}
+
+	
+.signinbutton:hover {
+	background:#f89406;
+}
+
+
+.signinbutton a{
+color:#fff;
+}
+.signupbutton a{
+color:#fff;
+}
+.signupbutton {
+
+}
+
+.signupbutton-second {padding:10px 25px;}
+
+.btn.signupbutton{
+	margin:0 15px;
+	background: transparent;
+	border: 1px solid white;
+	color: #fff;
+	text-shadow:0 1px 1px rgba(0, 0, 0, 0.5);
+	padding: 10px 35px;
+	font-size: 17px;
+	-webkit-transition-property: background-color,color;
+	-moz-transition-property: background-color,color;
+	-o-transition-property: background-color,color;
+	transition-property: background-color,color;
+	-webkit-transition-duration: 1s;
+	-moz-transition-duration: 0.3s;
+	-o-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+	color:white;
+	text-shadow:0px 1px 1px rgb(0,0,0,0, .5);
+	padding:10px 35px;
+	font-size:17px;
+	-webkit-transition-property:background-color,color;
+	-moz-transition-property:background-color,color;-o-transition-property:background-color,color;
+	transition-property:background-color,color;
+	-webkit-transition-duration:0.3s;
+	-moz-transition-duration:0.3s;-o-transition-duration:0.3s;
+	transition-duration:0.3s;
+}
+
+	
+.signupbutton:hover {
+	background:rgba(0,0,0,0.35);
 }
