--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Treebook</title>
+  <title>Tourist</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= google_webfonts_link_tag :open_sans        => [300] %>
 </head>
 <body>
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
-				<a href="#" class="brand"> Treebook</a>
-				<ul class="nav">
-					<li><%= link_to "All Statuses", feed_path %></li>
-				</ul>
+				<a href="#" class="brand"> Tourist</a>
 				<ul class="nav pull-right">
 					<% if user_signed_in? %>
+						<li><%= link_to 'Friends', user_friendships_path %></li>
 						<li><%= link_to current_user.full_name, edit_user_registration_path %></li>
-						<li><%= link_to "Log Out", logout_path %><li>
+						<li><%= link_to "Log Out", logout_path %></li>
 					<% else %>
 						<li><%= link_to "Register", register_path %></li>
 						<li><%= link_to "Log in", login_path %></li>
