--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
-				<a href="#" class="brand"> <img src="../img/logo.png" alt="logo" /></a>
+				<a href="touristapp.heroku.com/" class="brand"> <img src="../img/logo.png" alt="logo" /></a>
 				<ul class="nav pull-right">
 					<% if user_signed_in? %>
 						<li><%= link_to 'Friends', user_friendships_path %></li>
