--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
 
 body {
 	padding-top: 40px;
-		background: #77b5ee url(../img/bg.jpg) repeat 0 0;
+	background: #77b5ee url(../img/bg.jpg) repeat 0 0;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: top center;
@@ -170,18 +170,18 @@ font-size:20px;
     }
     
 .subnavbar-inner {
-	height: 80px;
+	height: 50px;
 	
 	
-	background: #4fb2e3;
-	background-image: -moz-linear-gradient(top, #4fb2e3, #2e7dc7);
-	background-image: -ms-linear-gradient(top, #4fb2e3, #2e7dc7);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4fb2e3), to(#2e7dc7));
-	background-image: -webkit-linear-gradient(top, #4fb2e3, #2e7dc7);
-	background-image: -o-linear-gradient(top, #4fb2e3, #2e7dc7);
-	background-image: linear-gradient(top, #4fb2e3, #2e7dc7);
+	background: #2e7dc7;
+	background-image: -moz-linear-gradient(top, #2e7dc7, #2e7dc7);
+	background-image: -ms-linear-gradient(top, #2e7dc7, #2e7dc7);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#2e7dc7), to(#2e7dc7));
+	background-image: -webkit-linear-gradient(top, #2e7dc7, #2e7dc7);
+	background-image: -o-linear-gradient(top, #2e7dc7, #2e7dc7);
+	background-image: linear-gradient(top, #2e7dc7, #2e7dc7);
 	background-repeat: repeat-x;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4fb2e3', endColorstr='#2e7dc7', GradientType=0);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2e7dc7', endColorstr='#2e7dc7', GradientType=0);
 	
 	border-bottom: 1px solid #3a85bc;
 }
@@ -189,7 +189,7 @@ font-size:20px;
 .subnavbar .container > ul {
 	display: inline-block;
 	
-	height: 80px;
+	height: 50px;
 	padding: 0;
 	margin: 0;
 	
@@ -201,10 +201,10 @@ font-size:20px;
 	float: left;
 	
 	min-width: 90px;
-	height: 80px;
+	height: 50px;
 	padding: 0;
 	margin: 0;
-	
+		
 	text-align: center;
 	list-style: none;
 	
@@ -215,12 +215,13 @@ font-size:20px;
 
 .subnavbar .container > ul > li > a {
 	display: block;
-	height: 100%;
-	padding: 0 15px;
+	height:30px;
+	padding: 20px 15px 0px 20px;
+
 	font-size: 12px;
 	font-weight: bold;
 	color: #e4e4e4;
-	
+
 	text-shadow: 1px 1px 1px rgba(0,0,0,.2);
 }
 
@@ -231,7 +232,7 @@ font-size:20px;
 
 .subnavbar .container > ul > li > a > i {
 	display: inline-block;
-	
+	float:left;
 	width: 24px;
 	height: 24px;
 	margin-top: 17px;
@@ -243,11 +244,12 @@ font-size:20px;
 
 .subnavbar .container > ul > li > a > span {
 	display: block;
+
 }
 
 
 .subnavbar .container > ul > li.active > a {
-	background: #3a85bc;
+	background: #3494ef;
 	color: #feffff;
 }
     
@@ -971,4 +973,10 @@ color:#fff;
 	
 .signupbutton:hover {
 	background:rgba(0,0,0,0.35);
+}
+
+#signin-padding {
+
+	padding-top:20px;
+
 }
