--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,21 +11,86 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
-				<a href="touristapp.heroku.com/" class="brand"> <img src="../img/logo.png" alt="logo" /></a>
+				<a href="/" class="brand"> <img src="../img/logo.png" alt="logo" /></a>
 				<ul class="nav pull-right">
 					<% if user_signed_in? %>
 						<li><%= link_to 'Friends', user_friendships_path %></li>
-						<li><%= link_to current_user.full_name, edit_user_registration_path %></li>
-						<li><%= link_to "Log Out", logout_path %></li>
+						
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.full_name %><b class="caret"></b></a>
+								<ul class="dropdown-menu">
+								
+									<li><%= link_to "My Profile", profile_path(current_user) %></li>
+									<li><%= link_to "Settings", edit_user_registration_path %></li>
+									<li class="divider"></li>
+									<li><%= link_to "Log Out", logout_path %></li>
+								</ul>
+						</li>
+
+
+
 					<% else %>
 						<li><%= link_to "Register", register_path %></li>
 						<li><%= link_to "Log in", login_path %></li>
 					<% end %>
-
 				</ul>
 			</div>
 		</div>
 	</div>
+	<% if user_signed_in? %>
+
+    
+	<div class="subnavbar">
+
+		<div class="subnavbar-inner">
+		
+			<div class="container">
+
+				<ul class="mainnav">
+				
+					<li class="active">
+						<a href="./">
+					
+							<span><i class="icon-home"></i>Home</span>
+						</a>	    				
+					</li>
+					
+					<li>
+						<a href="./faq.html">
+
+							<span><i class="icon-home"></i>Trips</span>
+						</a>	    				
+					</li>
+					
+					<li>					
+						<a href="./pricing.html" class="dropdown-toggle">
+
+							<span><i class="icon-home"></i>Explore</span>
+						</a>	  				
+					</li>
+					
+					<li>
+						<a href="./reports.html">
+
+							<span><i class="icon-home"></i>Connect</span>
+						</a>    				
+					</li>
+					
+					<li>					
+						<a href="./guidely.html">
+							<span><i class="icon-home"></i>Me</span>
+						</a>  									
+					</li>
+				</ul>
+
+			</div> <!-- /container -->
+		
+		</div> <!-- /subnavbar-inner -->
+
+	</div> <!-- /subnavbar -->
+	<% else %>
+	
+	<% end %>
 	<div class="container">
 		<% flash.each do |type, message| %>
 			<div class="alert <%= flash_class type %>">
