--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -13,6 +13,6 @@
   
   <%= f.input :content %>
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: "btn btn-warning" %>
   </div>
 <% end %>
