changed menu, caret styling

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,13 +2,13 @@
 	      	<div class="welcome-container">
 				<div class="span12">
 					<div class="tagline">
-						<h1>Travel like you've been there before</h1>
+						<h1>Travel Together</h1>
 
 						<div class="main-query-field">
-						<input type="text" class="main-query" placeholder="Search People or Places: i.e. San Francisco, San Francisco Hotels or Andrew Heil">
+						<input type="text" class="main-query" placeholder="Start your search. i.e. San Francisco, San Francisco Hotels or Andrew Heil">
 						</div>
 						<div class="main-info">
-						<p>This is Tourist. We're bringing travelers together around the globe to plan their trips.</p>						
+						<p>We're bringing travelers together around the globe to plan their trips.</p>						
 						<div class="users">
 							<button class="btn signupbutton">
 								<a href="#inline1">Sign Up</a>
