--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -111,7 +111,6 @@ textarea {
 }
 
 .navbar-inner {
-	padding: 2px 0;
 	
 	background: #e4e4e4;
 	
@@ -158,7 +157,16 @@ font-size:20px;
     color: #3d3d3d;
 }
 
+.navbar .container > ul > li {
 
+
+}
+
+.navbar .container > ul > li:hover{
+
+background-color:#f6f6f6;
+
+}
 
 /*------------------------------------------------------------------
 [3. Subnavbar / .subnavbar]
@@ -216,7 +224,7 @@ font-size:20px;
 .subnavbar .container > ul > li > a {
 	display: block;
 	height:30px;
-	padding: 20px 15px 0px 20px;
+	padding: 18px 15px 2px 15px;
 
 	font-size: 12px;
 	font-weight: bold;
@@ -669,14 +677,14 @@ margin:0 auto;
 
 
 .welcome-container h1, .welcome-container .tagline p {
-color: #fff;
-text-shadow: 0px 1px 1px rgb(0,0,0,0, .5);
+color: #2e7ec7;
+text-shadow: 0px 1px 1px rgb(100,100,100,100, .5);
 font-weight:bold;
 }
 
 .tagline p {
 color: #e3e3e3;
-text-shadow: 1px 1px 1px #333;
+text-shadow: 1px 1px 1px #fff;
 font-size:16px;
 }
 
