--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -3609,7 +3609,7 @@ input[type="submit"].btn.btn-mini {
 .navbar .brand {
   display: block;
   float: left;
-  padding: 8px 20px 12px;
+  padding: 8px 20px 8px;
   margin-left: -20px;
   font-size: 20px;
   font-weight: 200;
@@ -3785,7 +3785,7 @@ input[type="submit"].btn.btn-mini {
 
 .navbar .nav > li > a {
   float: none;
-  padding: 9px 10px 11px;
+  padding: 9px 25px 11px;
   line-height: 19px;
   color: #999999;
   text-decoration: none;
@@ -3805,7 +3805,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar .nav > li > a:hover {
-  color: #ffffff;
+  color: #5f5f5f;
   text-decoration: none;
   background-color: transparent;
 }
@@ -3926,8 +3926,8 @@ input[type="submit"].btn.btn-mini {
 
 .navbar .nav li.dropdown .dropdown-toggle .caret,
 .navbar .nav li.dropdown.open .caret {
-  border-top-color: #ffffff;
-  border-bottom-color: #ffffff;
+  border-top-color: #000;
+  border-bottom-color: #000;
 }
 
 .navbar .nav li.dropdown.active .caret {
