--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,11 @@
 
 
 					<% else %>
-						<li><%= link_to "Register", register_path %></li>
+
+						<li><%= link_to "About", register_path %></li>
+						<li><%= link_to "Contact", register_path %></li>
+						<li><%= link_to "Blog", register_path %></li>
+	
 						<li><%= link_to "Log in", login_path %></li>
 					<% end %>
 				</ul>
