--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -68,13 +68,13 @@
         <div class="widget widget-box">
           
           <div class="widget-header">
-                <h3>Extra Info</h3>
+                <h3>We want your feedback!</h3>
             </div> <!-- /widget-header -->
           
           <div class="widget-content">
             
               
-            <p>We made this from scratch.  Right out of Startup Weekend for travelers world wide. </p>
+            <p>We are just like you - trying to travel the globe intellegently.  We made this from scratch.  Right out of Startup Weekend for travelers world wide. </p>
             
           
             
