--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,23 +21,6 @@
 	      	</div>
 	      </div> <!-- /row -->
 		  
-		  <div class="row">
-			<div class="span12">
-
-				<div class="get-invited">
-					<div class="home-button">
-						<a href="#inline1" class="btn btn-warning signupbutton-second fancybox">Get Invited</a>
-					</div>
-					<div class="get-invited-text">
-						<h2>Reimagine Travel with Us.</h2>
-					</div>
-				</div>
-			
-			</div>
-		  </div>
-		  
-
-	
 	    </div> <!-- /container -->
 	    
 	</div> <!-- /main-inner -->
@@ -45,29 +28,60 @@
 </div> <!-- /main -->
 
 
-<div class="main-foot">
-	
-	<div class="main-foot-inner">
+<div id="section1">
+    <div class="container">
+        <h2>Featured Destinations</h2>
+        <div class="destination-large" style="background:url(../img/nyc.jpg);background-size:cover;">
+            <div class="featured-info">
+                <div class="featured-avatar">
+                    <img alt="Bang-avatar" src="../img/liberty-avatar.jpg" />
+                </div>
+                <div class="featured-content">
+                    <h2><a href="/feed">New York City</a></h2>
+                    <p>New York, New York</p>
+                </div>
+            </div>
+        </div>
+        <div class="destination-small">
+            <div class="destination-smaller" style="background:url(../img/sf.jpg);background-size:cover;">
+                <div class="featured-smaller-info">
+                    <div class="featured-smaller-avatar">
+                        <img src="../img/sf-logo.jpg"></img>
+                    </div>
+                    <div class="featured-smaller-content">
+                        <h2><a href="/feed">San Francisco</a></h2>
+                        <p>San Francisco, California</p>
+                    </div>  
+                </div>
+            </div>
+            <div class="destination-smaller" style="background:url(../img/orlando.jpg);background-size:cover;">
+                <div class="featured-smaller-info">
+                    <div class="featured-smaller-avatar">
+                        <img src="../img/orlando-avatar.jpg"></img>
+                    </div>
+                    <div class="featured-smaller-content">
+                        <h2><a href="/feed">Orlando</a></h2>
+                        <p>Orlando, Florida</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="section2">
+    <div class="container">
+        <div class="feature-left">
+            <h2>Build your trip together</h2>
+            <p>Quickly build your trips with family, friends and colleagues<br /><br />
+                /\ iss a social travel site helps you and others decide on what to do on your ideal vacation together.  We keep track of recommendations, tips and plans by everyone associated with the trip. We give you our recommedations based on the largest online travel library and the people you trust most - your friends. 
+            </p>
+        </div>
+        <div class="feature-right">
+            <img alt="Trip Planning" src="../img/planning.png" />
+        </div>
+    </div>
+</div>
 
-	    <div class="container">
-	
-		  
-		  <div class="row">
-			<div class="span12">
-
-				<div class="picture-foot-inner">
-				</div>
-				
-			</div>
-		  </div>
-		  
-
-	
-	    </div> <!-- /container -->
-	    
-	</div> <!-- /main-inner -->
-    
-</div> <!-- /main -->
 
 <div class="extra">
 
