--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1122,7 +1122,7 @@ margin-top: 10px;
 #section2 {
 width: 100%;
 height: 300px;
-background: #333;
+background: #3594f0;
 border-bottom: 1px solid #252525;
 
 font-family: 'Open Sans', sans-serif;
