--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -656,7 +656,7 @@ float: left;
 #lower {background-color:#000;}
 
 .main-foot {
-background-color:#2e7ec7;
+background-color:#3594f0;
 border-top-left-radius: 4px;
 border-top-right-radius: 4px;
 background-repeat: no-repeat;
@@ -1122,7 +1122,7 @@ margin-top: 10px;
 #section2 {
 width: 100%;
 height: 300px;
-background: #3594f0;
+background: #2e7ec7;
 border-bottom: 1px solid #252525;
 
 font-family: 'Open Sans', sans-serif;
