color and vocab fixes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -73,7 +73,7 @@
         <div class="feature-left">
             <h2>Build your trip together</h2>
             <p>Quickly build your trips with family, friends and colleagues<br /><br />
-                /\ iss a social travel site helps you and others decide on what to do on your ideal vacation together.  We keep track of recommendations, tips and plans by everyone associated with the trip. We give you our recommedations based on the largest online travel library and the people you trust most - your friends. 
+                /\ is a social travel site helps you and others decide on what to do on your ideal vacation together.  We keep track of recommendations, tips and plans by everyone associated with the trip. We give you our recommedations based on the largest online travel library and the people you trust most - your friends. 
             </p>
         </div>
         <div class="feature-right">
