--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -339,7 +339,7 @@ margin:0 auto;
 }
 
 .extra {
-	border-bottom: 1px solid #3a85bc;
+	border-bottom: 1px solid #3594f0;
 
 }
 
@@ -349,7 +349,7 @@ margin:0 auto;
 	font-size: 11px;
 	color: #c3c3c3;
 	
-	background: #18466a;
+	background: #2e7ec7;
 }
 
 .extra a {
@@ -382,7 +382,7 @@ margin:0 auto;
 
 .footer {
 	margin-top: 0;
-	background-color:#18466a;	
+	background-color:#2e7ec7;	
 }
 
 .footer-inner {
@@ -1122,7 +1122,7 @@ margin-top: 10px;
 #section2 {
 width: 100%;
 height: 300px;
-background: #2e7ec7;
+background: #18466a;
 border-bottom: 1px solid #252525;
 
 font-family: 'Open Sans', sans-serif;
