--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -41,6 +41,7 @@
         </div>
     </div>
 </div>
+<div style="clear:both;"></div>
 <div id="section2">
     <div class="container">
         <h2>Featured Destinations</h2>
